syntax = "proto3";

package book_store.books_service;

option go_package = "github.com/Surya-7890/book_store/proto/gen";



message GetCategoriesRequest {
    string id = 1;
}
message GetCategoriesResponse {}
message UpdateCategoriesRequest {}
message UpdateCategoriesResponse {}
message GetBookRequest {
    string id = 1;
    string c_id = 2;
}
message GetBookResponse {}
message GetBooksRequest {
    string id = 1;
}
message GetBooksResponse {}





message NewBookRequest {
    string id = 1;
    string name = 2;
    string author = 3;
    string category = 4;
    float price = 5;
}
message NewBookResponse {
    string status = 1;
}
message UpdateBookRequest {
    string id = 1;
    string name = 2;
    string author = 3;
    string category = 4;
    float price = 5;
}
message UpdateBookResponse {
    string status = 1;
}
message DeleteBookRequest {
    string id = 1;
}
message DeleteBookResponse {
    string status = 1;
}




message NewCategoryRequest {}
message NewCategoryResponse {}
message UpdateCategoryRequest {}
message UpdateCategoryResponse {}
message DeleteCategoryRequest {
    string id = 1;
}
message DeleteCategoryResponse {}